# Self_Healing_Infrastructure

./: .gitignore  README.md  main.py  pyproject.toml
0_chaos_app_target/: pom.xml
1_chaos_app_target/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
1_chaos_app_target/alembic/: env.py
1_chaos_app_target/alembic/versions/: 1d82d0d9ec4f_table_create_order_item_order_payment_.py  1f5167b28fc2_table_create_order.py  23bc916b2694_create_hero_table.py  246d7153288b_add_unique_constraint_to_category_name.py  530b514dc9a3_table_create_category_geolocation.py  603df793f140_create_geolocation_table.py  8b143b3d7424_create_category_table.py  8bbe2849578a_rename_order_table_to_orders_table.py  ac73a3a91d9a_table_create_product_customer_seller.py  e65e584d94b8_create_category_table.py
1_chaos_app_target/scripts/: clear_all_data.sql  download_data.py  load_all_data.sh
1_chaos_app_target/scripts/load_data/: load_category.py  load_category.sql  load_customer.sql  load_location.sql  load_order.sql  load_orderitem.sql  load_payment.sql  load_products.py  load_products.sql  load_review.sql  load_seller.sql
1_chaos_app_target/src/: main.py
1_chaos_app_target/src/api/: hello_world.py  test.py
1_chaos_app_target/src/database/: session.py
1_chaos_app_target/src/models/: __init__.py  category.py  customer.py  geolocation.py  hero.py  order.py  order_item.py  order_payment.py  order_review.py  product.py  seller.py
1_chaos_app_target/src/services/: hello_world_service.py  test_service.py
2_observability_pipeline/: main.py  pyproject.toml
(+2 files in other folders)
